Tue Feb 21 17:04:42 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/navigation-tree.c:
	  - Remove obsolete comment.

Tue Feb 21 23:27:00 GMT 2006  Daniel Drake  <dsd@gentoo.org>

	* src/fe-gnome/navigation-tree.h:
	* src/fe-gnome/navigation-tree.c:
	  - Convert current_path into current_rowref which should fix reference
	    counting. (#310688)

Mon Feb 20 17:49:38 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* plugins/notification/notification.c:
	  - Apply a modified version of James "Doc" Livingston's patch to fix
	    the notification-area plugin to handle the tray disappearing in an
	    elegant fashion.

Mon Feb 20 16:40:24 MST 2006  Daniel Drake <dsd@gentoo.org>

	* src/fe-gnome/util.c:
	* src/fe-gnome/util.h:
	* src/fe-gnome/preferences-dialog.c:
	* src/fe-gnome/connect-dialog.c:
	* src/fe-gnome/dcc-window.c:
	* src/fe-gnome/channel-list.c:
	  - Allow dialogs to be closed with the escape key (#331911)

Mon Feb 20 18:47:23 CET 2006  Daniel Drake <dsd@gentoo.org>

	* src/fe-gnome/main-window.c:
	  - Fix a crash with the change nick dialog (#331914).

Sun Feb 19 18:02:19 MST 2006  David Trowbridge <trowbrds@gmail.com>

	A m4/gnome-doc-utils.m4:
	A help/xchat-gnome.omf.in:
	D help/C/figures/Makefile.am:
	D help/C/Makefile.am:
	* help/C/xchat-gnome.xml:
	D help/C/xchat-gnome-C.omf:
	* help/Makefile.am:
	* configure.ac:
	* Makefile.am:
	  - Work towards using gnome-doc-utils for the help document

Sun Feb 19 17:24:45 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c:
	  - Apply Daniel Drake's patch to prevent the default font for new
	    users from being really ugly (#331832)

Sun Feb 19 17:04:14 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/preferences-page-irc.c:
	  - Eliminate a critical warning that occurred if the font name in
	    gconf was bad.

Sat Feb 18 14:32:42 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c: