@@ -93,6 +93,7 @@ void navigation_tree_select_prev_network      (NavTree *navtree);
 /* Misc. functions. */
 void navigation_tree_set_channel_name         (NavTree *navtree, struct session *sess);
 gboolean navigation_tree_server_is_connected  (NavTree *navtree, gchar *name);
+session *navigation_tree_get_selected_session (gboolean *connected);
 NavTree *get_navigation_tree                  ();
 
 
